﻿----------------------
phpMyAdmin - ChangeLog
----------------------

$Id$
$Source$

2006-10-10 Michal Čihař  <michal@cihar.com>
    * lang/german: Fix typo (translation #1467138).

2006-10-09 Michal Čihař  <michal@cihar.com>
    * lang/german: Fix typo (translation #1570611).

2006-10-09 Marc Delisle  <lem9@users.sourceforge.net>
    * libraries/export/sql.php: bug #1562533, problems with unbuffered queries
    * Documentation.html: FontFamily, FontFamilyFixed
    * themes/original/layout.inc.php: bug #1564409, default FontFamily

2006-10-07 Marc Delisle  <lem9@users.sourceforge.net>
    * scripts/create-release.sh: use lang-cleanup.sh from the kit,
      list all files, and allow non-anonymous access

2006-10-06 Marc Delisle  <lem9@users.sourceforge.net>
    * libraries/database_interface.lib.php, bug #1568341, last part of
      the fix to avoid problems on Windows servers, thanks to Juergen Wind

2006-10-06 Michal Čihař  <michal@cihar.com>
    * scripts/lang-cleanup.sh: Script for removing not installed languages
      from libraries/select_lang.lib.php.
    * scripts/create-release.sh: Make it better :-):
        - Create 7z archives
        - Make compression list configurable
        - Allow to define which kits to build
        - Call scripts/lang-cleanup.sh to remove not wanted languages
        - Do not login to cvs if already logged in

2006-10-05 Marc Delisle  <lem9@users.sourceforge.net>
    * scripts/create-release.sh: starting changes for new kits
      TODO: - trimming of libraries/select_lang.lib.php in the kit
            - 7zip 
            - remove gzip ?

2006-10-04 Michal Čihař  <michal@cihar.com>
    * Documentation.html: Fixes thanks to Matt LaPlante - cyberdog3k.
        - Fix Wikipedia URLs (patch #1568498).
        - Fix duplicate ids (patch #1568504).
    * tbl_replace.php, libraries/config.default.php: Add support for UTC_DATE,
      UTC_TIME and UTC_TIMESTAMP functions, based on patch #1563585, thanks to