@@ -7,6 +7,8 @@ $Source$
 
 2006-10-10 Michal Čihař  <michal@cihar.com>
     * lang/german: Fix typo (translation #1467138).
+    * libraries/import.lib.php: Correctly fail if file is too short (bug
+      #1574340).
 
 2006-10-09 Michal Čihař  <michal@cihar.com>
     * lang/german: Fix typo (translation #1570611).
